--- a/estuary-js-browser/package.json
+++ b/estuary-js-browser/package.json
@@ -1,7 +1,7 @@
 {
-  "type":"module",
-  "name": "estuary-js",
-  "version": "0.1.4-beta",
+  "name": "estuary-js-browser",
+  "type": "module",
+  "version": "0.1.0-beta",
   "description": "A client library for storing files on Filecoin and Ipfs through Estuary.tech.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,14 +10,13 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc && yalc publish --push"
   },
   "keywords": [],
   "author": "Kelindi",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.0",
-    "ipfs-car": "^0.9.1"
+    "axios": "^1.2.0"
   },
   "repository": {
     "type": "git",
