--- a/estuary-js-browser/tsconfig.json
+++ b/estuary-js-browser/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
-    "module": "ES2015",
-    "target":"ES5",
+    "module": "Node16",
+    "target":"ES2018",
     "declaration": true,
+    "rootDir": "src",
+    "baseUrl": "./",
     "outDir": "./dist",
-    "moduleResolution": "node",
+    "moduleResolution": "Node16",
     "esModuleInterop": true,     
-    
+    "skipLibCheck": true,
   },
   "include": [
     "src/**/*"
